--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <activity
             android:windowSoftInputMode="adjustNothing"
-            android:name=".ActivityHome"
+            android:name=".ActivitySleepScheduler"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +30,10 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".ActivityHome"
+            android:exported="true">
+        </activity>
 
     </application>
 
